# ben_ocr

./: .gitignore  OmniDocBench_CLA.md  README.md  README_zh-CN.md  pdf_validation.py  pyproject.toml
configs/: end2end.yaml
skills/: SKILL.md
skills/scripts/: generate_end2end_config.py  parse_results.py
tools/: generate_result_tables.ipynb  test_environment_and_smoke.py
tools/model_infer/: QifanOCR_img2md.py  Qwen3-VL-235B_img2md.py  gemini25_img2md.py
